Bug fixes: [1]Fix menu without scrollbar. -> when bookmarks go out of window viewable area

--- a/Source/mystyles.css
+++ b/Source/mystyles.css
@@ -18,4 +18,5 @@
     border: 1px solid #B6B4B6;
     display: block;
     box-shadow: 1px 1px 1px grey;
+    overflow-y: auto;
 }
